Updated Slick to 3.0, added few comments and fixed few things

--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -1,7 +1,7 @@
 // Configuration for c3p0 pool, not yet used
 
 c3p0.driverClass = "org.h2.Driver"
-c3p0.jdbcUrl = "jdbc:h2:mem:todo-list"
+c3p0.jdbcUrl = "jdbc:h2:mem:locations"
 c3p0.user = ""
 c3p0.password = ""
 c3p0.minPoolSize = 2
